--- a/contact.html
+++ b/contact.html
@@ -1575,7 +1575,7 @@
                                 <p><span style="font-size: 10pt;">立元投資股份有限公司</span><br><span
                                         style="font-size: 10pt;">統編：27557803</span><br><span
                                         style="font-size: 10pt;">顧客服務信箱：uchen5619@gmail.com</span><br><span
-                                        style="font-size: 10pt;">地址：臺北市松山區民生東路3段128號11樓</span>
+                                        style="font-size: 10pt;">地址：臺北市大安區信義路4段96號7樓</span>
                                 </p>
 
                             </div>
