--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col">
                     <a class="logo" href="./index.html"><img alt="Barings"
-                                                                                    src="./images/logo.png"></a>
+                                                             src="./images/logo.png"></a>
                 </div>
                 <div class="col-auto">
                     <div class="util">
@@ -226,7 +226,7 @@
                     <div class="cmp-header__menu-mobile__inner">
                         <ul class="unstyled menu-primary">
                             <li>
-                                <a href="https://www.barings.com/zh-tw/guest/about/who-we-are#">關於立元</a>
+                                <a>關於立元</a>
                                 <div class="menu-content d-none">
                                     <div class="cmp-header__menu-mobile__accordion">
                                         <div class="cmp-header__menu-mobile__accordion__title">
@@ -239,7 +239,7 @@
                                             <div class="cmp-header__menu-mobile__accordion__option__content">
 
                                                 <div class="cmp-header__menu-mobile__accordion__option__content__simple-link">
-                                                    <a href="https://www.barings.com/zh-tw/guest/about/who-we-are">公司概覽</a>
+                                                    <a href="./about.html">公司概覽</a>
                                                 </div>
                                                 <!--<div class="cmp-header__menu-mobile__accordion__option__content__simple-link">
                                                     <a href="./diversity-equity-and-inclusion.html">多元化、公平及共融</a>
@@ -323,7 +323,7 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="https://www.barings.com/zh-tw/guest/about/who-we-are#">多元化</a>
+                                <a>多元化</a>
                                 <div class="menu-content d-none">
                                     <div class="cmp-header__menu-mobile__accordion">
                                         <div class="cmp-header__menu-mobile__accordion__title">
@@ -377,7 +377,7 @@
                                 </div>
                             </li>-->
                             <li>
-                                <a >聯絡立元</a>
+                                <a>聯絡立元</a>
                                 <div class="menu-content d-none">
                                     <div class="cmp-header__menu-mobile__accordion">
                                         <div class="cmp-header__menu-mobile__accordion__title">
@@ -1017,7 +1017,7 @@
                                                                 <img src="about_files/who-we-are.jpg" class="img-fluid">
 
                                                                 <a class="permalink"
-                                                                   href="https://www.barings.com/zh-tw/guest/about/who-we-are">公司概覽</a>
+                                                                   href="./about.html">公司概覽</a>
                                                             </div>
                                                             <!--<div class="menu__submenu-nav-content__image-with-caption inherit-permalink col-3">
 
@@ -2135,7 +2135,11 @@
                                             <h2 class="cmp-three-pieces-carousel__slide__left-container__title">
                                                 投資實力</h2>
                                             <div class="cmp-three-pieces-carousel__slide__left-container__copy"><p>
-                                                我們有經驗的團隊尋找不同的機會，並在公共及私募固定收益、房地產及專門的股票市場建構投資組合。</p>
+                                                我們有經驗的團隊尋找不同的機會，並在公共及私募固定收益、房地產及專門的股票市場建構投資組合。<br><br>
+                                                １﹒對各種生產事業之投資。<br>
+                                                ２﹒對證券投資公司、銀行、保險公司、貿易公司、文化事業公司之投資。<br>
+                                                ３﹒對興建商業大樓及國民住宅之投資。<br>
+                                            </p>
                                             </div>
                                         </div>
                                     </div>
@@ -2266,10 +2270,19 @@
                                     <div class="col-box col-sm-7 col-md-6">
                                         <div class="cmp-image-layered__content__box">
                                             <p class="label-small">立元為一家投資公司，與機構合作</p>
-                                            <h2 class="text-blue-600 padded">集團簡介</h2>
-                                            <div class="text-big padded"><p>
-                                                利用公開和私募固定收益、實物資產和資本解決方案方面的能力，力求提供超額報酬。
-                                            </p>
+                                            <h2 class="text-blue-600 padded">立元公司簡介</h2>
+                                            <div class="text-big padded">
+                                                <!--<p>利用公開和私募固定收益、實物資產和資本解決方案方面的能力，力求提供超額報酬。</p>-->
+                                                <p>
+
+                                                    本公司是經裕隆汽車製造股份有限公司投資之證券投資顧問公司，公司創立於民國83年，
+                                                    專精從事「全權委託」投資業務，屬於國家特許金融業，是受金管會監督的合法專業投資機構，
+                                                    專為上市櫃公司與高階資產人士量身規劃長期穩定的資金配置與管理策略。
+                                                </p>
+                                                <p>
+                                                    本公司透過獨家研發的大數據運算程式，能精確瞄準市場趨勢，以實力和誠信為核心，積極追求企業、員工及客戶三方共好連結與成長。
+                                                    本公司擁有良好的工作環境與扁平化的組織結構，提供員工短期和長期的新人引導、職涯規劃、在職技能訓練及多元專長培訓，重視每一位員工的獨立自主性。
+                                                </p>
                                             </div>
 
                                             <!--<a href="https://www.barings.com/globalassets/taiwan-only/others/firmoverview-taiwanese.pdf"
@@ -2328,6 +2341,20 @@
                                             <div class="cmp-content-standard-carousel__body text-big"><p class="p1">
                                                 <span class="s1">
                                                     立元身為主力機構的一份子，30年來在台灣以領先地位提供專業的投資規劃、佈局管理、 擅長投資創新，強調良好風險管理架構下的穩健報酬。
+                                                </span>
+                                            </p>
+                                            </div>
+
+                                            <h3 class="cmp-content-standard-carousel__title">經營理念與願景</h3>
+                                            <div class="cmp-content-standard-carousel__body text-big"><p class="p1">
+                                                <span class="s1">
+                                                    投資為什麼會那麼困難！在資訊信手捻來的多元世界，為何還是沒辦法找到一個財富自由的康莊大道？資訊太多、專業判斷不足，不會刪除外部干擾資訊與克服人性弱點就容易陷入瞎子摸象的投資窘境！<br>
+從17世紀初以來，荷蘭人開始在阿姆斯特河橋上買賣全世界第一支公開交易的荷蘭東印度公司股票，四百多年全球在資本主義的推波助瀾下，證券市場在各種詭譎多變的經濟環境與地緣政治角力影響下蓬勃發展，更衍生了不計其數的可變因素讓研究與投資股市，變成一項極度專業的經濟分析。<br>
+立元投顧研究團隊深知唯有探求歷史演化長河趨勢，理解地緣政治在總體經濟下扮演什麼決定性的角色，才更能掌握產業更迭的脈動,尤其立元投顧的股東背景具有在全球金融資訊系統平台的領先地位，
+                                                    讓立元投顧的計量經營團隊可以依據全球金融資訊大數據,研發出各式各樣與股價相關係數高的因子,發展出判斷股價的多因子投資計量技術與長期的實戰績效，
+                                                    讓科技、創新、ESG、價值、品質、技術、規模、波動、動能等大數據資料在新金融科技量化下無所遁形。<br>
+                                                    <br>
+                                                    讓投資經理人可以化繁為簡、根據大數據量化在對的時點，專注投資信號作出投資決策，精確的佈局，擺脫人性貪婪與恐懼的干擾，為投資組合取得穩定、低風險的卓越績效。
                                                 </span>
                                             </p>
                                             </div>
@@ -2563,7 +2590,7 @@
                     <div class="cmp-footer__colophon__about pb-3 pb-sm-0">
                         <h6>關於立元</h6>
                         <div class="mb-3"><p>
-                            立元擁有先進的投資技術，擅長投資創新，強調良好風險管理架構下的穩健報酬。旗下的投資研究團隊超過 300 位的投資專家所在位置涵蓋全台所有金融市場的主要時區，建構一個二十四小時持續運作的堅強團隊。 汲取充分的研究資源和投資經驗，在合理規劃的架構下，提供紮實的投資服務。
+                            立元投顧倚靠金融科技的精進、對客戶需求深入的了解，不管是在投資的增值、全球資產的佈局、公司留才與退休金投資的長遠規劃，在計量、智能、科學的理念下給予客戶滿意的回報。 投資專業交給口袋投顧，就是接軌全球經濟演化增長。
                         </p>
                         </div>
                         <a href="./contact.html"
@@ -2578,36 +2605,32 @@
             </div>
         </div>
     </div>
-    <!--<div data-nosnippet="" class="cmp-footer__nav bg-gray-100 text-small py-2">
+    <div data-nosnippet="" class="cmp-footer__nav bg-gray-100 text-small py-2">
         <div class="container">
             <ul class="unstyled">
                 <li>
-                    <a href="https://www.barings.com/zh-tw/guest/content/privacy-notice" target="_blank"
-                       title="隱私權通知">隱私權通知</a>
+                    <a target="_blank"
+                       title="會員服務條款">會員服務條款</a>
                 </li>
                 <li>
-                    <a href="https://www.barings.com/zh-tw/guest/content/cookies-notice" target="_blank"
-                       title="Cookies通知">Cookies通知</a>
+                    <a target="_blank"
+                       title="隱私權及網站安全政策">隱私權及網站安全政策</a>
                 </li>
                 <li>
-                    <a href="https://www.barings.com/zh-tw/guest/content/terms-and-conditions" target="_blank"
-                       title="台灣法律和隱私">台灣法律和隱私</a>
+                    <a target="_blank"
+                       title="防制洗錢及打擊資恐">防制洗錢及打擊資恐</a>
                 </li>
                 <li>
-                    <a href="https://www.barings.com/zh-tw/guest/content/financial-service-center" target="_blank">金融友善服務專區</a>
+                    <a target="_blank">內部控制制度聲明書</a>
                 </li>
                 <li>
-                    <a href="https://www.barings.com/zh-tw/guest/content/aml-service-center"
-                       target="_blank">洗錢防制專區</a>
+                    <a target="_blank">金融消費爭議專區</a>
                 </li>
                 <li>
-                    <a href="https://www.barings.com/zh-tw/guest/content/enterprise-cybersecurity-center">企業網路安全中心</a>
+                    <a target="_blank">金融友善服務措施</a>
                 </li>
                 <li>
-                    <a href="https://www.barings.com/zh-tw/guest/content/holiday-dividend-info-tw" target="_blank">非交易日和配息專區</a>
-                </li>
-                <li>
-                    <a href="https://www.barings.com/zh-tw/guest/sitemap" target="_blank">網站地圖</a>
+                    <a target="_blank">個人資料保護法</a>
                 </li>
             </ul>
 
@@ -2617,31 +2640,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p><strong>立元證券投資顧問股份有限公司 獨立經營管理 一零六年金管投顧新字第零零貳號
-                        地址：台北市基隆路一段333號21樓2112室 電話：0800-062-068</strong></p>
-                    <p><strong>本基金經金管會核准或同意生效，惟不表示絕無風險。基金經理公司以往之經理績效不保證基金之最低投資收益；基金經理公司除盡善良管理人之注意義務外，不負責本基金之盈虧，亦不保證最低之收益，投資人申購前應詳閱基金公開說明書。本基金無受存款保險、保險安定基金或其他相關保障機制之保障。基金投資可能產生的最大損失為全部本金，投資人需自負盈虧。如因基金投資產生紛爭，投資人可先向本公司提出申訴，投資人不接受本公司申訴處理結果或未在三十日內處理回覆時，投資人可在處理結果或期限屆滿之日六十日內再向「金融消費評議中心」申請評議。所提供之資料僅供參考，此所提供之資料、建議或預測乃基於或來自相信為可靠之消息來源。然而，本公司並不保證其準確及完整性。該等資料、建議或預測將根據市場情況而隨時更改。本公司不保證其預測將可實現，並不對任何人因使用任何此提供之資料、建議或預測所引起之損失而負責。本文之經濟走勢預測亦不代表相關基金績效，基金投資風險請詳閱基金公開說明書。有關基金應負擔之費用(含分銷費用)已揭露於基金之公開說明書及投資人須知中，投資人可至境外基金資訊觀測站中查詢。基金投資涉及新興市場的部分，因其波動性與風險程度可能較高，且其政治與經濟情勢穩定度可能低於已開發國家，也可能使資產價值受不同程度之影響。依法令規定，投資大陸地區證券市場之有價證券以掛牌上市有價證券為限(即A股及B股)，且投資前述有價證券總金額不得超過本基金淨資產價值之百分之二十。投資人亦須留意中國市場特定政治、經濟與市場等投資風險。 </strong>
+                    <p><strong>立元投資顧問股份有限公司獨立經營管理 獨立經營管理 113年金管投顧新字第016號
+                        </strong></p>
+                    <p><strong>本公司所提供之資訊，僅供接收人參考使用。本公司當盡力提供正確之資訊，所載資料均來自或本諸我們相信可靠之來源
+                    </strong>
                     </p>
-                    <p><strong><span style="color: #008000;">本基金經金管會核准或同意生效，惟不表示絕無風險。由於非投資等級債券之信用評等未達投資等級或未經信用評等，且對利率變動的敏感度甚高，故本基金可能會因利率上升、市場流動性下降，或債券發行機構違約不支付本金、利息或破產而蒙受虧損。本基金不適合無法承擔相關風險之投資人。基金經理公司以往之經理績效不保證基金之最低投資收益；基金經理公司除盡善良管理人之注意義務外，不負責本基金之盈虧，亦不保證最低之收益，投資人申購前應詳閱基金公開說明書。投資人投資以非投資等級債券為訴求之基金不宜佔其投資組合過高的比重。 </span></strong>
-                    </p>
-                    <p><strong>基金的配息可能由基金的收益或本金中支付。任何涉及由本金支出的部份，可能導致原始投資金額減損。基金近12個月配息組成項目表請參見立元證券投資顧問股份有限公司網站。基金配息率不代表基金報酬率，且過去配息率不代表未來配息率；基金淨值可能因市場因素而上下波動。僅適用於立元大東協基金、立元亞洲增長基金、立元澳洲基金、立元歐寶基金、立元香港中國基金、立元東歐基金、立元全球資源基金、立元拉丁美洲基金、立元全球新興市場基金：本基金配息類股之配息基準日為每年四月底(如有配息)，其配息來自已扣除相關費用及支出後之淨收入，不會來自本金。僅適用於立元歐洲精選信託基金：本基金配息類股之付息日為每年五月一日及十一月一日(如有配息)，其配息來自已扣除相關費用及支出後之淨收入，不會來自本金。僅適用於立元成熟及新興市場非投資等級債券基金<span
-                            style="color: #008000;">(本基金之配息來源可能為本金)</span></strong><strong>、立元全球平衡基金<span
-                            style="color: #008000;">(基金之配息來源可能為本金)</span>、立元優先順位資產抵押債券基金<span
-                            style="color: #008000;">(本基金主要係投資於非投資等級之高風險債券且配息來源可能為本金)</span>G級別、立元環球非投資等級債券基金<span
-                            style="color: #008000;">(本基金之配息來源可能為本金)</span>G級別</strong><strong>：本基金配息前未先扣除應負擔之相關費用。過去績效並非現在及未來績效之指標。績效資料並未考量基金單位發行及贖回所生之佣金及成本。</strong>
-                    </p>
-                    <p><strong>僅適用於立元成熟及新興市場非投資等級債券基金<span
-                            style="color: #008000;">(本基金之配息來源可能為本金)</span>、立元優先順位資產抵押債券基金<span
-                            style="color: #008000;">(本基金主要係投資於非投資等級之高風險債券且配息來源可能為本金)</span>、立元環球非投資等級債券基金<span
-                            style="color: #008000;">(本基金之配息來源可能為本金)</span>：本基金有相當比重投資於符合美國Rule
-                        144A規定之私募性質債券，較可能發生流動性不足，財務訊息揭露不完整或因價格不透明導致波動性較大之風險，投資人需留意相關風險。</strong>
-                    </p>
-
-                    <p>版權所有©2023
-                        Barings。BARINGS的名稱和標誌設計是立元的商標，並在美國專利及商標局和世界其他國家註冊。保留所有權利。</p>
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 </footer>
 
 <script src="about_files/BrowserCompatibility.js"></script>
@@ -2649,7 +2656,7 @@
 <script type="text/javascript" src="about_files/find.js"></script>
 <script type="text/javascript" src="about_files/application.js"></script>
 <script type="text/javascript">
-    var allFunction = function(){
+    var allFunction = function () {
         var t;
         return t = this.get("thumbnail.height") / this.get("thumbnail.width"), isNaN(t) ? 3 / 4 : t
     }
