--- a/index.html
+++ b/index.html
@@ -2316,8 +2316,8 @@
 
                             </div>
                             <div class="cmp-three-cards-standard__quote d-none d-sm-block">
-                                <blockquote>“我們深刻的理解股市的運作，又熟悉一級市場，有各大券商合作，具有極強的投融資和行業整合能力。秉承互惠的企業文化，我們始終是主力與資本的長期合作夥伴。”
-                                </blockquote>
+                                <p class="text-big">“我們深刻的理解股市的運作，又熟悉一級市場，有各大券商合作，具有極強的投融資和行業整合能力。秉承互惠的企業文化，我們始終是主力與資本的長期合作夥伴。”
+                                </p>
                                 <!--p class="label">MIKE FRENO </p>
                                 <p class="label label-small">Barings LLC主席及行政總裁</p>-->
                             </div>
@@ -2548,6 +2548,50 @@
                     <div class="cmp-footer__colophon__social">
 
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div data-nosnippet="" class="cmp-footer__nav bg-gray-100 text-small py-2">
+        <div class="container">
+            <ul class="unstyled">
+                <li>
+                    <a target="_blank"
+                       title="會員服務條款">會員服務條款</a>
+                </li>
+                <li>
+                    <a target="_blank"
+                       title="隱私權及網站安全政策">隱私權及網站安全政策</a>
+                </li>
+                <li>
+                    <a target="_blank"
+                       title="防制洗錢及打擊資恐">防制洗錢及打擊資恐</a>
+                </li>
+                <li>
+                    <a target="_blank">內部控制制度聲明書</a>
+                </li>
+                <li>
+                    <a target="_blank">金融消費爭議專區</a>
+                </li>
+                <li>
+                    <a target="_blank">金融友善服務措施</a>
+                </li>
+                <li>
+                    <a target="_blank">個人資料保護法</a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+    <div data-nosnippet="" class="cmp-footer__legal bg-gray-400 text-small py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <p><strong>立元投資顧問股份有限公司獨立經營管理 獨立經營管理 113年金管投顧新字第016號
+                    </strong></p>
+                    <p><strong>本公司所提供之資訊，僅供接收人參考使用。本公司當盡力提供正確之資訊，所載資料均來自或本諸我們相信可靠之來源
+                    </strong>
+                    </p>
                 </div>
             </div>
         </div>
