--- a/contact.html
+++ b/contact.html
@@ -1574,7 +1574,7 @@
                                 <p><span style="font-size: 10pt;"><strong>台北總公司</strong></span></p>
                                 <p><span style="font-size: 10pt;">立元投資股份有限公司</span><br><span
                                         style="font-size: 10pt;">統編：27557803</span><br><span
-                                        style="font-size: 10pt;">顧客服務信箱：uchen5619@gmail.com</span><br><span
+                                        style="font-size: 10pt;">顧客服務信箱：lytzvise@mail.com</span><br><span
                                         style="font-size: 10pt;">地址：臺北市大安區信義路4段96號7樓</span>
                                 </p>
 
@@ -1666,6 +1666,50 @@
             </div>
         </div>
     </div>
+        <div data-nosnippet="" class="cmp-footer__nav bg-gray-100 text-small py-2">
+            <div class="container">
+                <ul class="unstyled">
+                    <li>
+                        <a target="_blank"
+                           title="會員服務條款">會員服務條款</a>
+                    </li>
+                    <li>
+                        <a target="_blank"
+                           title="隱私權及網站安全政策">隱私權及網站安全政策</a>
+                    </li>
+                    <li>
+                        <a target="_blank"
+                           title="防制洗錢及打擊資恐">防制洗錢及打擊資恐</a>
+                    </li>
+                    <li>
+                        <a target="_blank">內部控制制度聲明書</a>
+                    </li>
+                    <li>
+                        <a target="_blank">金融消費爭議專區</a>
+                    </li>
+                    <li>
+                        <a target="_blank">金融友善服務措施</a>
+                    </li>
+                    <li>
+                        <a target="_blank">個人資料保護法</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+        <div data-nosnippet="" class="cmp-footer__legal bg-gray-400 text-small py-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <p><strong>立元投資顧問股份有限公司獨立經營管理 獨立經營管理 113年金管投顧新字第016號
+                        </strong></p>
+                        <p><strong>本公司所提供之資訊，僅供接收人參考使用。本公司當盡力提供正確之資訊，所載資料均來自或本諸我們相信可靠之來源
+                        </strong>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     <!--<div data-nosnippet="" class="cmp-footer__nav bg-gray-100 text-small py-2">
         <div class="container">
             <ul class="unstyled">
