--- a/contact.html
+++ b/contact.html
@@ -1577,6 +1577,16 @@
                                         style="font-size: 10pt;">顧客服務信箱：lytzvise@mail.com</span><br><span
                                         style="font-size: 10pt;">地址：臺北市大安區信義路4段96號7樓</span>
                                 </p>
+                                <p style="display: inline-block;margin-right: 1rem;">
+                                    <a href="https://www.facebook.com/profile.php?id=100068783532308" target="_blank">
+                                        <img src="/images/facebook-80.png" style="width: 2rem;margin: 0;height: 2rem;">
+                                    </a>
+                                </p>
+                                <p style="display: inline-block;">
+                                    <a href="https://www.youtube.com/channel/UCSplPMFwUQM0dDsQO8EEb7A" target="_blank">
+                                        <img src="/images/youtube-80.png" style="width: 2rem;margin: 0;height: 2rem;">
+                                    </a>
+                                </p>
 
                             </div>
                         </div>
