--- a/about.html
+++ b/about.html
@@ -2070,6 +2070,8 @@
             </div>
         </div>
     </div>
+
+
     <div class="cmp-three-pieces-carousel  mt-10 mt-sm-10 mt-lg-10 mb-10"
          data-carousel-id="car-ea4fdf5a-ca36-40cc-ae6c-8fad3d525c2e" id="car-ea4fdf5a-ca36-40cc-ae6c-8fad3d525c2e"
          data-direction="ltr" data-autoplay="5" data-loop="&#39;true&#39;" data-component="cmpThreePiecesCarousel"
@@ -2246,6 +2248,106 @@
             </div>
         </div>
     </div>
+
+
+
+    <div class="cmp-three-pieces-carousel  mt-10 mt-sm-10 mt-lg-10 mb-10"
+         data-carousel-id="car-ea4fdf5a-ca36-40cc-ae6c-8fad3d525c2e11" id="car-ea4fdf5a-ca36-40cc-ae6c-8fad3d525c2e11"
+         data-direction="ltr" data-autoplay="5" data-loop="&#39;true&#39;" data-component="cmpThreePiecesCarousel"
+         style="opacity: 1; transform: unset; transition: 1s;">
+        <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-10 col-xl-8">
+                        <h1>合作銀行</h1></div>
+                </div>
+            <div class="row" style="margin-top:2rem">
+                    <div class="row portfolio-container">
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://www.bot.com.tw/tw/personal-banking" target="_blank">
+                                <img src="assets/img/yh/twyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="臺灣銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://www.hncb.com.tw/" target="_blank">
+                                <img src="assets/img/yh/hnyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="華南銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://www.taishinbank.com.tw/TSB/personal/" target="_blank">
+                                <img src="assets/img/yh/txyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="台新銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://mybank.ubot.com.tw/ubot/#/home" target="_blank">
+                                <img src="assets/img/yh/lbyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="聯邦銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://bank.sinopac.com/sinopacBT/index.html" target="_blank">
+                                <img src="assets/img/yh/ylyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="永豐銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://www.skbank.com.tw/" target="_blank">
+                                <img src="assets/img/yh/xgyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="新光銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://www.yuantabank.com.tw/bank/" target="_blank">
+                                <img src="assets/img/yh/ydyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="元大銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://www.firstbank.com.tw/sites/fcb/personalhome" target="_blank">
+                                <img src="assets/img/yh/ydyh1.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="第一銀行"></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="margin-top:2rem">
+                            <a href="https://www.esunbank.com/zh-tw/personal" target="_blank">
+                                <img src="assets/img/yh/ysyh.png" class="img-fluid" alt="">
+                            </a>
+                            <div class="portfolio-info">
+                                <a data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="玉山銀行"></a>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+
     <div class="cmp-image-layered  pb-lg-10" data-component="cmpImageLayered"
          style="opacity: 0; transform: translateY(300px);">
         <div class="cmp-image-layered__wrap">
